- add english version

--- a/en/index.html
+++ b/en/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="../favicon.png">
     <meta
             name="description"
-            content="Дроздов Алексей · php / разработчик / технический лидер / руководитель"
+            content="Drozdov Aleksey · php / developer / technical leader / manager"
     />
     <meta name="author" content="Drozdov Aleksey"/>
     <title>
-        Дроздов Алексей · php / разработчик / технический лидер /
-        руководитель
+        Drozdov Aleksey · php / developer / technical leader / manager
     </title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -29,14 +28,15 @@
 <div class="container py-4">
     <div class="row">
         <div class="col-md-12">
-            <a href="en/index.html">English</a>
+            <a href="../index.html">Russian</a>
         </div>
     </div>
+
     <div class="pt-5 pb-5">
         <div class="container-fluid">
-            <h1 class="fw-bold">Алексей Дроздов</h1>
+            <h1 class="fw-bold">Aleksey Drozdov</h1>
             <p class="col-md-8 fs-4">
-                php / разработчик / технический лидер / руководитель
+                php / developer / technical leader / manager
             </p>
         </div>
     </div>
@@ -46,47 +46,47 @@
                 <h2>Dev</h2>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item text-bg-dark">
-                        Проектирование и разработка backend функционала
-                        для высоконагруженных и корпоративных систем
-                        (CRM, интернет‑магазины, платформы рассылок,
-                        системы дистанционного обучения)
+                        Design and development of backend functionality
+                        for high-load and enterprise systems (CRM,
+                        online stores, mailing platforms, distance
+                        learning systems)
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Разработка и сопровождение микросервисов и
-                        сервис‑ориентированных решений
+                        Development and support of microservices and
+                        service-oriented solutions
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Проектирование и оптимизация реляционных баз
-                        данных (MySQL, PostgreSQL)
+                        Design and optimization of relational databases
+                        (MySQL, PostgreSQL)
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Работа с NoSQL‑решениями
+                        Work with NoSQL solutions
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Разработка и интеграция REST и gRPC API,
-                        реализация клиентских SDK
+                        Development and integration of REST and gRPC
+                        APIs, implementation of client SDKs
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Оптимизация производительности и устранение
-                        узких мест
+                        Performance optimization and bottleneck
+                        elimination
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Внедрение и настройка мониторинга ресурсов и
-                        ошибок
+                        Implementation and configuration of resource and
+                        error monitoring
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Работа с системами очередей и кэширования в
-                        highload‑среде
+                        Work with queue and caching systems in high-load
+                        environments
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Контейнеризация и эксплуатация сервисов с
-                        использованием Docker
+                        Containerization and operation of services using
+                        Docker
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Разработка и поддержка авто-тестов
+                        Development and maintenance of automated tests
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Написание и поддержка технической документации
+                        Writing and maintaining technical documentation
                         (wiki, openapi, swagger)
                     </li>
                 </ul>
@@ -97,36 +97,36 @@
                 <h2>Lead</h2>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        Взаимодействие с бизнес‑заказчиками: сбор
-                        требований, формирование технических решений,
-                        согласование планов реализации.
+                        Interaction with business customers: gathering
+                        requirements, forming technical solutions,
+                        agreeing on implementation plans
                     </li>
                     <li class="list-group-item">
-                        Управление командами разработки (backend,
-                        frontend, DevOps) численностью до 10 сотрудников
+                        Management of development teams (backend,
+                        frontend, DevOps) with up to 10 employees
                     </li>
                     <li class="list-group-item">
-                        Аналитика, декомпозиция, приоритизация и
-                        постановка задач. Оценка трудозатрат
+                        Analytics, decomposition, prioritization and
+                        task setting. Estimation of labor costs
                     </li>
                     <li class="list-group-item">
-                        Организация и проведение код‑ревью
+                        Organization and conduct of code reviews
                     </li>
                     <li class="list-group-item">
-                        Формирование и контроль соблюдения технических
-                        стандартов и регламентов
+                        Formation and control of compliance with
+                        technical standards and regulations
                     </li>
                     <li class="list-group-item">
-                        Проектирование систем и сервисов. Принятие
-                        архитектурных решений
+                        System and service design. Making architectural
+                        decisions
                     </li>
                     <li class="list-group-item">
-                        Управление сроками и качеством релизов, контроль
-                        выполнения планов релизов
+                        Managing release timelines and quality,
+                        controlling release plan execution
                     </li>
                     <li class="list-group-item">
-                        Подбор, найм и развитие сотрудников, проведение
-                        технических собеседований
+                        Recruitment, hiring, and development of
+                        employees, conducting technical interviews
                     </li>
                 </ul>
             </div>
@@ -1015,6 +1015,7 @@
             </div>
         </div>
     </div>
+
     <div class="row align-items-md-stretch mb-4">
         <div class="col-md-12">
             <div class="h-100">
@@ -1033,7 +1034,8 @@
                                     aria-expanded="false"
                                     aria-controls="flush-collapseOne"
                             >
-                                Сбер решения. Онлайн-бухгалтерия для ИП
+                                Sber Solutions. Online accounting for
+                                individual entrepreneurs
                             </button>
                         </h2>
                         <div
@@ -1056,8 +1058,8 @@
                                     aria-expanded="false"
                                     aria-controls="flush-collapseTwo"
                             >
-                                Важная рыба. Производство, продажа и
-                                доставка азиатской кухни
+                                Vazhnaya Ryba. Production, sale and
+                                delivery of Asian cuisine
                             </button>
                         </h2>
                         <div
@@ -1080,7 +1082,7 @@
                                     aria-expanded="false"
                                     aria-controls="flush-collapseThree"
                             >
-                                билайн. Разработка CRM систем
+                                beeline. CRM systems development
                             </button>
                         </h2>
                         <div
@@ -1103,8 +1105,8 @@
                                     aria-expanded="false"
                                     aria-controls="flush-collapse4"
                             >
-                                Melon Fashion Group. Производство и
-                                продажа одежды
+                                Melon Fashion Group. Clothing production
+                                and sales
                             </button>
                         </h2>
                         <div
@@ -1127,7 +1129,7 @@
                                     aria-expanded="false"
                                     aria-controls="flush-collapse5"
                             >
-                                fotostrana.ru. Соцсеть
+                                fotostrana.ru. Social network
                             </button>
                         </h2>
                         <div
@@ -1150,9 +1152,8 @@
                                     aria-expanded="false"
                                     aria-controls="flush-collapse6"
                             >
-                                Национальный исследовательский Томский
-                                государственный университет. Система
-                                дистанционного образования
+                                National Research Tomsk State
+                                University. Distance learning system
                             </button>
                         </h2>
                         <div
@@ -1175,8 +1176,8 @@
                                     aria-expanded="false"
                                     aria-controls="flush-collapse7"
                             >
-                                Томский государственный университет
-                                систем управления и радиоэлектроники
+                                Tomsk State University of Control
+                                Systems and Radioelectronics
                             </button>
                         </h2>
                         <div
@@ -1185,7 +1186,7 @@
                                 data-bs-parent="#accordionFlushExample"
                         >
                             <div class="accordion-body">
-                                Разработка сайтов
+                                Website development
                             </div>
                         </div>
                     </div>
@@ -1198,9 +1199,9 @@
             <div class="h-100">
                 <h2>Lang</h2>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Русский: родной</li>
+                    <li class="list-group-item">Russian: Native</li>
                     <li class="list-group-item">
-                        Английский: А1 ¯\_(ツ)_/¯
+                        English: A1 ¯\_(ツ)_/¯
                     </li>
                 </ul>
             </div>
