--- a/en/index.html
+++ b/en/index.html
@@ -47,7 +47,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item text-bg-dark">
                         Design and development of backend functionality
-                        for high-load and enterprise systems (CRM,
+                        for highload and enterprise systems (CRM,
                         online stores, mailing platforms, distance
                         learning systems)
                     </li>
@@ -75,7 +75,7 @@
                         error monitoring
                     </li>
                     <li class="list-group-item text-bg-dark">
-                        Work with queue and caching systems in high-load
+                        Work with queue and caching systems in highload
                         environments
                     </li>
                     <li class="list-group-item text-bg-dark">
