--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </li>
                     <li class="list-group-item text-bg-dark">
                         Работа с системами очередей и кэширования в
-                        highload‑среде
+                        highload среде
                     </li>
                     <li class="list-group-item text-bg-dark">
                         Контейнеризация и эксплуатация сервисов с
