- add google tag

--- a/en/index.html
+++ b/en/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6VXPM7K5KR"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBSLEX6H4K"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-6VXPM7K5KR');
+        gtag('config', 'G-HBSLEX6H4K');
     </script>
 
     <meta charset="utf-8"/>
